<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegionZip</string>
    <string name="action_settings">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="textFieldText">Enter Zipcode Here</string>
    <string name="searchButn">Search</string>
    <string name="enter_zipcode_here">Enter Zipcode Here</string>
    <string name="search">Search</string>
    <string name="popular_zipcodes">US Regions(State Only)</string>
    <string name="zipcode_banner">Zipcode Banner</string>
    <string name="areacode_">Areacode:</string>
    <string name="city_">City:</string>
    <string name="county_">County:</string>
    <string name="state_">State:</string>
    <string name="latitude_">Latitude:</string>
    <string name="longitude_">Longitude:</string>
    <string name="csa_name_">Csa name:</string>
    <string name="cbsa_name_">Cbsa name:</string>
    <string name="region_">Region:</string>
    <string name="timezone_">Timezone:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="zipcode_2_">Zipcode 2:</string>
    <string name="areacode_2_">AreaCode 2:</string>
    <string name="city_2_">City 2:</string>
    <string name="county_2_">County 2:</string>
    <string name="state_2_">State 2:</string>
    <string name="latitude_2_">Latitude 2:</string>
    <string name="longitude_2_">Longitude 2:</string>
    <string name="region_2_">Region 2:</string>
    <string name="timezone_2_">Timezone 2:</string>
    <string name="zipcodes_">Zipcodes:</string>
    <string name="region">Region</string>
    <string name="search_all_regions">All US Regions Info</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="county">county</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="timezone">Timezone</string>
    <string name="areacodes">AreaCodes</string>
    <string name="zipcodes">Zipcodes</string>
    <string name="Search"></string>
    <string name="my_names_cameron_mozie_and_i_am_a_student_at_full_sail_university_i_currently_reside_in_landover_md_and_am_looking_to_graduate_fall_2014_">My names Cameron Mozie and I am a student at Full Sail University. I currently reside in Landover MD, and am looking to graduate Fall 2014.</string>
    <string name="todo">TODO</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="show_region">Show Region</string>
    <string name="feedback">Send Feedback</string>

</resources>
