<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
     <TextView 
      			android:id="@+id/row1_2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/zipcodes_"
		        style="@style/textLabels"/>
  
  <TextView 
      			android:id="@+id/row2_2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/areacode_"
		        style="@style/textLabels"/>
  
  <TextView 
      			android:id="@+id/row3_2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/region"
		        style="@style/textLabels"/>
  


</LinearLayout>
