<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              
              
  <TextView 
      			android:id="@+id/row1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/zipcodes_"
		        style="@style/textLabels"/>
  
  <TextView 
      			android:id="@+id/row2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/areacode_"
		        style="@style/textLabels"/>
  
  <TextView 
      			android:id="@+id/row3"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:paddingLeft="5dp"
		        android:text="@string/region"
		        style="@style/textLabels"/>
  
  </LinearLayout>
  
  
      
        