<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/location1_header2"
        android:text="@string/zipcodes_"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:layout_width="10dp"
        android:textStyle="bold"
       style="@style/listHeaderStyle"
        android:layout_height="wrap_content"/>
    
    
    <TextView 
        android:id="@+id/location2_header2"
        android:text="@string/areacodes"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:layout_width="10dp"
        android:textStyle="bold"
        
        android:layout_height="wrap_content"
        style="@style/listHeaderStyle"/>

    <TextView 
        android:id="@+id/location3_header2"
        android:text="@string/region"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:layout_width="10dp"
        android:textStyle="bold"
        
        android:layout_height="wrap_content"
        style="@style/listHeaderStyle"/>
 

</LinearLayout>
